--- a/data/gnome-video-arcade.glade
+++ b/data/gnome-video-arcade.glade
@@ -108,11 +108,13 @@
                     <property name="sensitive">False</property>
                     <property name="can_focus">True</property>
                     <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
+                    <property name="has_tooltip">True</property>
                     <property name="headers_clickable">True</property>
                     <property name="rules_hint">True</property>
                     <property name="show_expanders">False</property>
                     <signal name="popup_menu" handler="gva_tree_view_popup_menu_cb"/>
                     <signal name="button_press_event" handler="gva_tree_view_button_press_event_cb"/>
+                    <signal name="query_tooltip" handler="gva_tree_view_query_tooltip_cb"/>
                     <signal name="row_activated" handler="gva_tree_view_row_activated_cb"/>
                     <signal name="columns_changed" handler="gva_columns_save"/>
                   </widget>
